--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
             >Frontend Mentor</a
           >
-          <span class="text"> Coded by </span><a href="#">Emmanuel</a>.
+          <span class="text"> Coded by </span
+          ><a href="https://github.com/Notobd">Emmanuel</a>.
         </div>
       </footer>
     </div>
